--- a/thesis/discussion.tex
+++ b/thesis/discussion.tex
@@ -15,7 +15,7 @@ snapshots. \todo{compare to autograd, venture, church}
   Using Cassette on code you wrote is a bit like shooting youself with a experimental mind control
   weapon, to force your hands to move like you knew how to fly a helicopter. Even if it works, you
   still had to learn to fly the helicopter in order to program the mind-control weapon to force
-  yourself to act like you knew how to fly a helicopter.\footnote{Lyndon White, private
+  yourself to act like you knew how to fly a helicopter.\footnote{Lyndon White (2020), private
     communication on \protect\url{https://julialang.slack.com}.}
 \end{quote}
 
