--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -101,7 +101,10 @@
 \captionstyle[\raggedright]{}
 % \renewcommand{\textfloatsep}{\baselineskip}
 
+\newsubfloat{figure}
+
 \setFloatBlockFor{section} % like \usepackage[section]{placeins}, but from memoir
+
 
 % listing floats
 \newfloat[chapter]{lstfloat}{lolst}{Listing}
