--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -117,6 +117,11 @@
 }
 
 % algorithm floats
+\usepackage{algpseudocode}
+\algrenewcommand\textproc{\texttt}
+\newcommand{\textident}[1]{\texttt{#1}}
+\algnewcommand{\LineComment}[1]{\State \(\triangleright\) \textit{#1}}
+
 \newcommand{\algorithmname}{Algorithm}
 \newcommand{\listalgorithmname}{List of Algorithms}
 \newlistof{listofalgorithms}{loa}{\listalgorithmname}
@@ -124,7 +129,6 @@
 \newfixedcaption{\falgcaption}{algorithm}
 \newlistentry{algorithm}{loa}{0}
 
-\newenvironment{myalgorithmic}{\hrule\begin{enumerate}\sffamily}{\end{enumerate}\hrule}
 
 % \usepackage{float}
 % \floatstyle{ruled}
